--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Auto Download HTML</title>
 </head>
 <body>
-    <a href="data:text/html;charset=utf-8,<html><head><title>My Page</title></head><body><h1>Hello, world!</h1><p>This is an automatically downloaded HTML file.</p></body></html>" download="https://eservices.tnpolice.gov.in/CCTNSNICSDC/Index?0--repeatertwo-1-censlideImage&antiCache=1713187129464">Download HTML</a>
+    <a href="data:text/html;charset=utf-8,<html><head><title>My Page</title></head><body><h1>Hello, world!</h1><p>This is an automatically downloaded HTML file.</p></body></html>" download="https://eservices.tnpolice.gov.in/CCTNSNICSDC/Index?0--repeatertwo-2-censlideImage&antiCache=1713187129464
+        ">Download HTML</a>
 </body>
 </html>
