--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Auto Download HTML</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Auto Download</title>
 </head>
 <body>
-    <a href="data:text/html;charset=utf-8,<html><head><title>My Page</title></head><body><h1>Hello, world!</h1><p>This is an automatically downloaded HTML file.</p></body></html>" download="https://eservices.tnpolice.gov.in/CCTNSNICSDC/Index?0--repeatertwo-2-censlideImage&antiCache=1713187129464
-        ">Download HTML</a>
+    <a href="https://eservices.tnpolice.gov.in/CCTNSNICSDC/Index?3--repeatertwo-3-censlideImage&antiCache=1713186660282" download>Click here to download</a>
 </body>
 </html>
